# Peripherate

./: .gitmodules  README.md  pyproject.toml
peripherate/adc/: adc_base.h  adc_generator.py
peripherate/buses/: i2c_base.cpp  i2c_base.h
peripherate/include/: buses.h  err_codes.h
peripherate/utils/: serialize_dataclass.py
